# MP4Reader

./: README.md
MP4Parse/: CMakeLists.txt  make.sh
MP4Parse/source/: CMakeLists.txt  MP4.BinaryStream.cpp  MP4.MDAT.cpp  MP4.Parser.cpp
MP4Parse/source/include/: MP4.BinaryStream.h  mp4.h  types.h
src/: m_util.h  mp4reader.cpp
